--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="main-page.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="about.html">About Me</a></li>
                     <li><a href="#contact.html">Contact Me</a></li>
