--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
         </div>
     </div>
       
-      <a id="yt-link" class="meta-link" href="main-page.html" target="_blank">
+      <a id="yt-link" class="meta-link" href="index.html" target="_blank">
         <span>Main Page</span>
       </a>
 </body>
